--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     background: #e9e6e6;
     color: #000;
     padding: 40px 30px;
-    min-height: 100vh;
+    min-height: fit-content;
     max-width: auto;
 }
 .sider__bar_drop {
@@ -430,4 +430,35 @@ header {
 	background-image: none;
     border: 2px solid red !important;
     box-shadow: none;
+}
+
+
+
+
+/* SLIDE  */
+.boxes {
+    min-width: 125px;
+    max-width: 125px;
+    height: fit-content;
+    text-align: center;
+    margin-right: 9px;
+    display: block;
+}
+.box_img {
+    width: 100%;
+    height: 125px;
+    border-radius: 12px;
+    background: #85ccf8;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
+}
+.over_slide {
+    background: #5f5f5f;
+    width: 100%;
+    overflow-x: scroll;
+}
+
+
+
+.boxes .box_text {
+    text-transform: uppercase;
 }
