--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ header {
     width: 50%;
     height: 100%;
     background: white;
-    padding: 20px 30px;
+    padding: 80px 30px;
 }
 .content__bar_calender_layout_img {
     display: flex;
@@ -206,7 +206,7 @@ header {
 }
 .mbsc-calendar-scroll-wrapper {
 	display: block;
-	height: 75% !important;
+	/* height: 75% !important; */
 	overflow: hidden;
 	position: relative;
 	border: 3px solid #007aff;
@@ -437,19 +437,16 @@ header {
 
 /* SLIDE  */
 .boxes {
-    min-width: 125px;
-    max-width: 125px;
     height: fit-content;
     text-align: center;
-    margin-right: 9px;
     display: block;
 }
 .box_img {
     width: 100%;
-    height: 125px;
-    border-radius: 12px;
+    border-radius: 8px;
     background: #85ccf8;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
+    overflow: hidden;
 }
 .over_slide {
     background: #5f5f5f;
