--- a/css/style.css
+++ b/css/style.css
@@ -9,27 +9,27 @@ header {
     background: #000;
 }
 
-.sider__bar {
+.sider_bar {
     background: #e9e6e6;
     color: #000;
     padding: 40px 30px;
     min-height: fit-content;
     max-width: auto;
 }
-.sider__bar_drop {
+.sider_bar_drop {
     margin-bottom: 20px;
 }
-.sider__bar_drop .dropdown .dropdown-toggle::after {
+.sider_bar_drop .dropdown .dropdown-toggle::after {
     border-top: .4em solid;
     border-right: .4em solid transparent;
     border-bottom: 0;
     border-left: .4em solid transparent;
     display: inherit;
 }
-.sider__bar_drop .dropdown .dropdown-toggle .dropdown-toggle-icon {
+.sider_bar_drop .dropdown .dropdown-toggle .dropdown-toggle-icon {
     width: 22px;
 }
-.sider__bar_drop .dropdown .dropdown-toggle {
+.sider_bar_drop .dropdown .dropdown-toggle {
     font-size: 19px;
     font-weight: bold;
 }
@@ -43,7 +43,7 @@ header {
 
 
 
-.sider__bar_drop {
+.sider_bar_drop {
     width: 100%;
 }
 
@@ -110,20 +110,20 @@ header {
 
 
 
- .sider__bar_select_text {
+ .sider_bar_select_text {
     color: #000;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 10px;
  } 
- .sider__bar_select_text_max {
+ .sider_bar_select_text_max {
     color: rgba(0, 0, 0, 0.689);
     font-size: 13px;
  } 
- .sider__bar_textarea {
+ .sider_bar_textarea {
     margin-bottom: 3px;
  }
-.sider__bar_textarea textarea {
+.sider_bar_textarea textarea {
     outline: none;
     padding: 8px 10px;
     width: 100%;
@@ -157,12 +157,12 @@ header {
 /* =====================  */
 /* =====================  */
 /* =====================  */
-.content__bar {
+.content_bar {
     background: #5f5f5f;
     padding: 30px 66px;
 
 }
-.content__bar_calender_layout {
+.content_bar_calender_layout {
     width: 100%;
     height: 600px;
     display: flex;
@@ -173,25 +173,25 @@ header {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
-.content__bar_calender_layout_img {
+.content_bar_calender_layout_img {
     width: 50%;
     height: 100%;
     background: #85ccf8;
     padding: 20px 30px;
 }
-.content__bar_calender_layout_content {
+.content_bar_calender_layout_content {
     background: white;
     width: 50%;
     height: 100%;
     background: white;
     padding: 80px 30px;
 }
-.content__bar_calender_layout_img {
+.content_bar_calender_layout_img {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.content__layout_img {
+.content_layout_img {
     width: 60%;
 }
 
@@ -276,7 +276,7 @@ header {
 .mbsc-page {
     padding: 1em;
 }
-.form__tittle .form-control{
+.form_tittle .form-control{
     border: 2px solid white;
     color: white;
     font-weight: 600;
@@ -284,19 +284,19 @@ header {
     background: transparent;
     padding: 10px 20px;
 }  
-.form__tittle input::placeholder{
+.form_tittle input::placeholder{
     color: white;
 }                          
-.content__bar .content__bar_preview_text {
+.content_bar .content_bar_preview_text {
     color: rgba(255, 255, 255, 0.795);
     font-size: 14px;
     font-weight: 600;
     margin: 0px 0 15px;
 }
-.content__bar_preview {
+.content_bar_preview {
     padding-left: 40px;
 }
-.content__bar_preview_btn {
+.content_bar_preview_btn {
     /* border: 2px solid white !important; */
     /* padding: 4px 8px; */
     /* color: white; */
@@ -306,7 +306,7 @@ header {
     text-decoration: none;
     
 }
-.content__bar_preview_btn.save {
+.content_bar_preview_btn.save {
     /* border: 2px solid white !important; */
     /* padding: 4px 8px; */
     /* color: white; */
@@ -333,7 +333,7 @@ header {
 	height: fit-content;
 	margin-top: 0px;
 }
-.content__bar_calender_layout_content .mbsc-flex-1-0 {
+.content_bar_calender_layout_content .mbsc-flex-1-0 {
 	-moz-box-flex: 1;
 	flex: 0 0 auto;
 }
@@ -344,29 +344,29 @@ header {
     .mbsc-page {
         width: 100%;
     }
-    .content__bar_calender_layout_content {
+    .content_bar_calender_layout_content {
         padding: 20px 10px;
     }
 }
 @media (max-width:1200px) {
-    .content__bar_calender_layout {
+    .content_bar_calender_layout {
         flex-wrap: wrap;
         height: auto;
     }
-    .content__bar_calender_layout_img {
+    .content_bar_calender_layout_img {
         width: 100%;
     }
-    .content__bar_calender_layout_content {
+    .content_bar_calender_layout_content {
         width: 100%;
     }
 }
 @media (max-width:991px) {
-    .content__bar {
+    .content_bar {
         padding: 30px 30px;
     }
 }
 @media (max-width:767px) {
-    .sider__bar {
+    .sider_bar {
         min-height: fit-content;
         padding: 15px 30px;
     }
@@ -376,24 +376,24 @@ header {
     }
 }
 @media (max-width:575px) {
-    .content__bar_preview_btn.save {
+    .content_bar_preview_btn.save {
         margin-left: 0px;
         margin-top: 10px;
     }
-    .content__bar_preview {
+    .content_bar_preview {
         padding-left: 00px;
     }
-    .content__bar_preview_btn.save,.content__bar_preview_btn {
+    .content_bar_preview_btn.save,.content_bar_preview_btn {
         font-size: 16px;
     }
-    .form__tittle .form-control {
+    .form_tittle .form-control {
         font-size: 16px;
         padding: 7px 16px;
     }
-    .content__bar {
+    .content_bar {
         padding: 25px 18px;
     }
-    .sider__bar {
+    .sider_bar {
         min-height: fit-content;
         padding: 15px 18px;
     }
@@ -426,7 +426,7 @@ header {
     }
 }
 
-.sider__bar_color_platte .form-check-input:checked[type="radio"] {
+.sider_bar_color_platte .form-check-input:checked[type="radio"] {
 	background-image: none;
     border: 2px solid red !important;
     box-shadow: none;
