--- a/css/style.css
+++ b/css/style.css
@@ -147,15 +147,6 @@ header {
 } 
 
 
-
-
-
-/* =====================  */
-/* =====================  */
-/* =====================  */
-/* =====================  */
-/* =====================  */
-/* =====================  */
 /* =====================  */
 .content_bar {
     background: #5f5f5f;
@@ -168,7 +159,7 @@ header {
     display: flex;
     align-items: center;
     border-radius: 30px;
-    /* border: 3px solid #000; */
+    background: white;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
@@ -180,11 +171,11 @@ header {
     padding: 20px 30px;
 }
 .content_bar_calender_layout_content {
-    background: white;
+    /* background: white; */
     width: 50%;
-    height: 100%;
-    background: white;
-    padding: 80px 30px;
+    /* height: 100%; */
+    /* background: white; */
+    padding: 0px 30px;
 }
 .content_bar_calender_layout_img {
     display: flex;
@@ -277,12 +268,12 @@ header {
     padding: 1em;
 }
 .form_tittle .form-control{
-    border: 2px solid white;
+    border: 1px solid white;
     color: white;
-    font-weight: 600;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 18px;
     background: transparent;
-    padding: 10px 20px;
+    padding: 7px 15px;
 }  
 .form_tittle input::placeholder{
     color: white;
@@ -293,26 +284,13 @@ header {
     font-weight: 600;
     margin: 0px 0 15px;
 }
-.content_bar_preview {
-    padding-left: 40px;
-}
+
 .content_bar_preview_btn {
-    /* border: 2px solid white !important; */
-    /* padding: 4px 8px; */
-    /* color: white; */
-    /* font-size: 18px; */
-    /* font-weight: bold; */
-    /* border-radius: 12px; */
     text-decoration: none;
     
 }
 .content_bar_preview_btn.save {
-    /* border: 2px solid white !important; */
-    /* padding: 4px 8px; */
-    /* color: white; */
     font-size: 18px;
-    /* font-weight: bold; */
-    /* border-radius: 12px; */
     text-decoration: none;
     width: 300px;
 }
